# deerlay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py  index.md
docs/guide/: concepts.md  extending.md  install.md
src/deerlay/: __init__.py  callbacks.py
tests/: conftest.py  test_directory_layout.py  test_named_hierarchical_layout.py
