[project]
name = "dirlayout"
version = "0.0.0"
description = "Tiny package to discover and parse files from different directory layouts"
readme = "README.md"
authors = [
    { name = "PRFina", email = "PRFina@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
